# rust-server-entity

completeserver/: .env  Cargo.toml
completeserver/migration/: Cargo.toml
completeserver/migration/src/: lib.rs  m20251230_170836_students_information.rs  m20251230_170856_staff_information.rs  m20251230_170908_departments_information.rs  m20260101_181024_login.rs
completeserver/src/: main.rs
completeserver/src/entities/: departments.rs  login.rs  mod.rs  staff.rs  student.rs
completeserver/src/handler/: departments.rs  login.rs  mod.rs  staff.rs  students.rs
completeserver/src/routes/: departments.rs  login.rs  mod.rs  staff.rs  students.rs
