[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"


[dependencies]
sea-orm-migration = { version = "1.1", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres"
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"

